# ClusteringPlugin

./: CMakeLists.txt  PluginInfo.json  README.md  conanfile.py  vcpkg.json
.github/workflows/: build.yml
src/: ClusteringPlugin.cpp  ClusteringPlugin.h  SettingsAction.cpp  SettingsAction.h
